--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,13 @@ body {
     text-align: center;
 }
 
+img {
+    margin-left: 7px;
+    margin-right: 7px;
+    width: 100px;
+    height: 100px;
+}
+
 h1 {
     height: 50px;
     text-align: center;
@@ -13,7 +20,7 @@ h1 {
 
 .tombol-container {
     display: inline-block;
-    margin-top: 30px;;
+    margin-top: 10px;;
 }
 
 button {
@@ -26,7 +33,7 @@ button {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 10px;
+    margin: 4px 8px;
     cursor: pointer;
 }
 
@@ -36,6 +43,7 @@ form {
     padding: 20px;
     max-width: 400px;
     margin: 40px auto;
+    margin-bottom: 35px;
     box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.1);
 }
 
@@ -74,6 +82,22 @@ button[type="button"] {
 }
 
 button[type="button"]:hover {
+    background-color: #bd6b07;
+}
+
+button[type="buttonreset"] {
+    background-color: #f38701;
+    color: white;
+    padding: 10px 20px;
+    margin-top: 16px;
+    margin: 22px 0px;
+    margin-bottom: 0px;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+button[type="buttonreset"]:hover {
     background-color: #bd6b07;
 }
 
